replace photolist with ref in album model
